OPHJOD-1581: Refactor ArtikkelinKatselu and introduce ViimeksiKatseltuArtikkeli entity for tracking article views